Add steps for pkg installation

--- a/README.Rmd
+++ b/README.Rmd
@@ -24,21 +24,34 @@ The package currently contains only one function `read_matomo_data`.
 
 ## Installation
 
-You can install the development version from [GitHub](https://github.com/) with:
+As the repository is private, you first need to generate a personal access token in https://github.com/settings/tokens. The token can then be added to the .Renviron file.
+
+Follow these steps:
+
+1. Generate personal access token in https://github.com/settings/tokens
+2. Click "Generate new token"
+3. Select box "repo"
+4. Click "Generate token"
+5. Copy token to clipboard
+6. Call: `usethis::edit_r_environ`
+7. Save the .Renviron file
+8. Restart R via "Session -> Restart R" or "Ctrl / Cmd + Shift + Enter"
+9. Go for it:
 
 ``` r
 # install.packages("devtools")
 devtools::install_github("statistikZH/statZHmatomo")
 ```
 
+More info can be found on the help page for [`remotes::install_github`](https://remotes.r-lib.org/reference/install_github.html) or in the official [GitHub documentation](https://docs.github.com/en/github/authenticating-to-github/creating-a-personal-access-token) on how to create a personal access token.  
+
 ## Prerequisites
 
-The Matomo API Token needs to be added to the .Renviron file before the function `read_matomo_data` can be used. The token is then called via `Sys.getenv("token")`. To add your token, follow these steps:
-
+Your Matomo API Token needs to be added to the .Renviron file before the function `read_matomo_data` can be used. The token is then called via `Sys.getenv("token")`. To add your token, follow these steps:
 
 1. If not already installed, call `install.packages("usethis")`.
 2. Call `usethis::edit_r_environ`
-3. Add your token on new line as "token = YOUR_TOKEN"
+3. Add your token on new line as "token = 'YOUR_TOKEN'"
 4. Save the .Renviron file
 5. Restart R via "Session -> Restart R" or "Ctrl / Cmd + Shift + Enter"
 
