--- a/README.Rmd
+++ b/README.Rmd
@@ -13,13 +13,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-# statZHmatomo - R Package to access Web Analytics of Matomo Analyrtics
+# statZHmatomo - R Package to access Web Analytics of Matomo Analytics
 
 <!-- badges: start -->
 
 <!-- badges: end -->
 
-The goal of {statZHmatomo} is to provide functions for easy access to the [Matomo Reporting API](https://developer.matomo.org/api-reference/reporting-api). 
+The goal of {statZHmatomo} is to provide functions for access to the [Matomo Reporting API](https://developer.matomo.org/api-reference/reporting-api). 
 
 Currently, the package supports:
 
