--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 
+[![Lifecycle: experimental](man/figures/lifecycle-experimental.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 <!-- badges: end -->
 
 The goal of {statZHmatomo} is to provide functions for access to the [Matomo Reporting API](https://developer.matomo.org/api-reference/reporting-api). 
