--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# statZHmatomo - R Package to access Web Analytics of Matomo Analytics
+# statZHmatomo
 
 <!-- badges: start -->
 
