--- a/vignettes/read_matamo_data.Rmd
+++ b/vignettes/read_matamo_data.Rmd
@@ -11,7 +11,9 @@ vignette: >
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
-  collapse = TRUE,
+  collapse = TRUE, 
+  message = FALSE,
+  warning = FALSE,
   comment = "#>"
 )
 ```
@@ -52,9 +54,7 @@ Um `read_matomo_data.R` zu nutzen, muss mittels der Funktion `set_matomot_server
 Folgender Code speichert die Verbindung zum ZHWeb Daten- und Publikationskatalog als Objekt mit dem Namen con_obj ab, welches dann als erstes Argument in `read_matomo_data.R` genutzt wird (siehe unten).
 
 ```{r}
-
 con_obj <- set_matomo_server(server = "webzh-dk")
-
 ```
 
 ## Verhalten -> apiModule: Actions 
@@ -67,28 +67,37 @@ Die Übersicht "Seiten (EN: Pages)" im matomo Dashboard entspricht der API actio
 
 #### Gestern
 
-```{r}
-
-## Gestern
-
+```{r, echo=TRUE, eval=FALSE}
+## Argument date muss nicht gesetzt werden, da "yesterday" bereits vorbestimmt ist
 read_matomo_data(connection = con_obj, apiModule = "Actions", apiAction = "getDownloads") %>% 
   select(1:4) %>% 
   janitor::clean_names() %>% 
   knitr::kable()
+```
 
+```{r, echo=FALSE, eval=TRUE}
+## Gestern
+read_matomo_data(connection = con_obj, 
+                 apiModule = "Actions", 
+                 apiAction = "getDownloads") %>% 
+  select(1:4) %>% 
+  janitor::clean_names() %>% 
+  knitr::kable()
 ```
 
 #### Dieser Monat
 
 ```{r, echo=TRUE, eval=FALSE}
-
 ## Tag auf aktuellen Tag setzen
 date_this_month <- Sys.Date()
 
 ## Für period month auswählen
-read_matomo_data(connection = con_obj, apiModule = "Actions", apiAction = "getPageUrls", date = date_this_month, period = "month") %>% 
+read_matomo_data(connection = con_obj, 
+                 apiModule = "Actions", 
+                 apiAction = "getPageUrls", 
+                 date = date_this_month, 
+                 period = "month") %>% 
   select(1:4)
-
 ```
 
 
@@ -98,8 +107,14 @@ date_this_month <- Sys.Date()
 
 ## Dieser Monat
 
-read_matomo_data(connection = con_obj, apiModule = "Actions", apiAction = "getPageUrls", date = date_this_month, period = "month") %>% 
-  select(1:4)
+read_matomo_data(connection = con_obj, 
+                 apiModule = "Actions", 
+                 apiAction = "getPageUrls", 
+                 date = date_this_month, 
+                 period = "month") %>% 
+  select(1:4)  %>% 
+  janitor::clean_names() %>% 
+  knitr::kable()
 
 
 ```
@@ -107,7 +122,6 @@ read_matomo_data(connection = con_obj, apiModule = "Actions", apiAction = "getPa
 #### Letzter Monat
 
 ```{r, echo=TRUE, eval=FALSE}
-
 ## Tag auf einen Tag im letzten Monat setzen
 date_last_month <- Sys.Date - 31
 
@@ -120,8 +134,6 @@ read_matomo_data(connection = con_obj,
   select(1:4) %>% 
   janitor::clean_names() %>% 
   knitr::kable()
-
-
 ```
 
 ```{r, echo=FALSE}
@@ -145,9 +157,7 @@ read_matomo_data(connection = con_obj,
 #### Seit ZHWeb Launch
 
 ```{r, echo=TRUE, eval=FALSE}
-
 ## Period auf "year" setzen
-
 read_matomo_data(connection = con_obj, 
                  apiModule = "Actions", 
                  apiAction = "getPageUrls", 
@@ -177,9 +187,7 @@ read_matomo_data(connection = con_obj,
 Im JSON Format gibt die API auch die sogenannten "subtables" heraus. Neu ist hier die List-Column "subtable" in welcher nun Metriken für die einzelnen Datensätze im Datenkatalog zu finden sind.
 
 ```{r}
-
 ## Subtable
-
 getPage_json <- read_matomo_data(connection = con_obj,
                                  apiModule = "Actions", 
                                  apiAction = "getPageUrls", 
