--- a/README.Rmd
+++ b/README.Rmd
@@ -13,12 +13,16 @@ knitr::opts_chunk$set(
 )
 ```
 
+![](man/figures/kt_zh.png)
+
 # statZHmatomo
 
 <!-- badges: start -->
 
 [![Lifecycle: experimental](man/figures/lifecycle-experimental.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 <!-- badges: end -->
+
+## Project description
 
 The goal of {statZHmatomo} is to provide functions for access to the [Matomo Reporting API](https://developer.matomo.org/api-reference/reporting-api). 
 
@@ -29,6 +33,29 @@ Currently, the package supports:
 - Portal [opendata.swiss](https://opendata.swiss/de/)
 
 The package currently contains two function: `read_matomo_data` and `set_matomo_server`.
+
+
+## Prerequisites
+
+Your Matomo API Token needs to be added to the `.Renviron` file before the function `read_matomo_data()` can be used. The token is then called via `Sys.getenv("token")`. 
+
+To add your token, follow these steps:
+
+1. If not already installed, call `install.packages("usethis")`.
+2. Call `usethis::edit_r_environ()`
+3. Add each of your tokens on a new line with the following names: 
+    
+    # ZHweb Datenkataliog Matomo token
+    token_webzh-dk = "YOUR_TOKEN"
+    
+    # opendata.swiss Matomo token
+    token_openzh = "YOUR_TOKEN"
+    
+    # ZHWeb Token
+    token_webzh = "YOUR_TOKEN"
+     
+4. Save the .Renviron file
+5. Restart R via "Session -> Restart R" or "Ctrl / Cmd + Shift + Enter"
 
 ## Installation
 
@@ -72,28 +99,6 @@ devtools::install_github("statistikZH/statZHmatomo")
 
 More info can be found on the help page for [`remotes::install_github`](https://remotes.r-lib.org/reference/install_github.html) or in the official [GitHub documentation](https://docs.github.com/en/github/authenticating-to-github/creating-a-personal-access-token) on how to create a personal access token.  
 
-## Prerequisites
-
-Your Matomo API Token needs to be added to the .Renviron file before the function `read_matomo_data` can be used. The token is then called via `Sys.getenv("token")`. 
-
-To add your token, follow these steps:
-
-1. If not already installed, call `install.packages("usethis")`.
-2. Call `usethis::edit_r_environ()`
-3. Add each of your tokens on a new line with the following names: 
-    
-    # ZHweb Datenkataliog Matomo token
-    token_webzh-dk = "YOUR_TOKEN"
-    
-    # opendata.swiss Matomo token
-    token_openzh = "YOUR_TOKEN"
-    
-    # ZHWeb Token
-    token_webzh = "YOUR_TOKEN"
-     
-4. Save the .Renviron file
-5. Restart R via "Session -> Restart R" or "Ctrl / Cmd + Shift + Enter"
-
 ## Example
 
 This is a basic example using the API module 'Action' and the API action 'getPageUrls'.
@@ -120,4 +125,27 @@ dat %>%
   knitr::kable()
 
 ```
+
+## Contributors
+
+- [@ruizcpr](https://github.com/ruizcrp)
+- [@larnsce](https://github.com/larnsce)
+
+## Contact
+
+Christian Ruiz  
+christian.ruiz@statistik.ji.zh.ch  
++41 (0)43 259 7500  
+
+## License
+
+[Copyright (c) <2019> <Statistisches Amt Kanton Zürich>](https://github.com/statistikZH/STAT_Schablone/blob/master/LICENSE_code)
+
+## Richtlinien für Beiträge
+
+Wir begrüßen Beiträge. Bitte lesen Sie unsere [CONTRIBUTING.md](https://github.com/statistikZH/STAT_Schablone/blob/master/CONTRIBUTING.md) Datei, wenn sie daran interessiert sind. Hier finden Sie Informationen die zeigen wie Sie beitragen können. 
+
+Bitte beachten Sie, dass dieses Projekt mit einem [Verhaltenskodex](https://github.com/statistikZH/STAT_Schablone/blob/master/CodeOfConduct.md) veröffentlicht wird. Mit Ihrer Teilnahme an diesem Projekt erklären Sie sich mit dessen Bedingungen einverstanden.
+
+
 
