--- a/README.Rmd
+++ b/README.Rmd
@@ -128,8 +128,8 @@ dat %>%
 
 ## Contributors
 
-- [@ruizcpr](https://github.com/ruizcrp)
-- [@larnsce](https://github.com/larnsce)
+- [ruizcpr](https://github.com/ruizcrp) 
+- [larnsce](https://github.com/larnsce)
 
 ## Contact
 
